# Limbus-Company-Auto-Guides

./: .gitignore  README.md  _missing_refs.json  pyproject.toml  requirements.txt
config/: sinners.json  unique_mechanics.json
data/: _tmp_play.txt  evaluation_results.json  poc_evaluation_results.json  wiki_audit_report.json
data/_snapshots/: ring_apprentice_faust_git.md  ring_apprentice_key_status_effects.md
data/guides/: Blade_Lineage_Mentor_Meursault.json  Blade_Lineage_Salsu_Sinclair.json  Blade_Lineage_Salsu_Yi_Sang.json  Cinq_Assoc._East_Section_3_Don_Quixote.json  Devyat'_Assoc._North_Section_3_Sinclair.json  District_20_Yurodivy_Hong_Lu.json  District_20_Yurodivy_Ryōshū.json  Edgar_Family_Butler_Ishmael.json  Edgar_Family_Chief_Butler_Ryōshū.json  Firefist_Office_Survivor_Gregor.json  (+42 more)
docs/: 301-wiki-identity-parsing.mdc  302-llm-oriented-writing.mdc  agile-backlog.md  data-strategy.md  domain-primer.md  evaluation.md  final-presentation-outline.md  how-to-run.md  ingestion-rulebook.md  project-specification.md  sota.md  sprints.md  status-effects.md  sus-test-1.md  sus-test-2.md  sus-test-3.md  sus-test-4.md  sus-test-template.md  sus-user-study-results.md  term-paper.md
notebooks/: embedding_evaluation.ipynb  llm_evaluation.ipynb  ner_evaluation.ipynb
scripts/: add_identity.py  audit_wiki_parsing.py  fetch_identity_portraits.py  fetch_wiki_identities.py  run_evaluation.py  run_pipeline.py  run_poc_evaluations.py  setup.cmd  setup.ps1
tests/: test_guide_text_format.py  test_identity_portraits.py  test_pipeline.py  test_wiki_parser.py
(+131 files in other folders)
